--- a/packages/autolinker/package.json
+++ b/packages/autolinker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@halo/<%= name %>",
+  "name": "@halo/autolinker",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
@@ -12,9 +12,8 @@
     "dist/**/*",
     "example/**/*"
   ],
-  "repository":{
-    "type": "git",
-    "url": "https://github.com/hhhyyyy99/halo.git"
+  "dependencies": {
+    "dompurify": "3.0.8"
   },
   "publishConfig":{
     "access": "public",
@@ -22,5 +21,8 @@
     "typings":"dist/index.d.ts",
     "types":"dist/index.d.ts",
     "main":"dist/index.js"
+  },
+  "devDependencies": {
+    "@types/dompurify": "3.0.5"
   }
 }
