--- a/packages/autolinker/package.json
+++ b/packages/autolinker/package.json
@@ -17,7 +17,7 @@
   },
   "publishConfig":{
     "access": "public",
-    "registry": "https://registry.npmjs.org",
+    "registry": "https://registry.npmjs.org/",
     "typings":"dist/index.d.ts",
     "types":"dist/index.d.ts",
     "main":"dist/index.js"
