--- a/packages/autolinker/package.json
+++ b/packages/autolinker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@halo/autolinker",
+  "name": "@eamon98/autolinker",
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
@@ -12,15 +12,20 @@
     "dist/**/*",
     "example/**/*"
   ],
-  "dependencies": {
-    "dompurify": "3.0.8"
+  "repository":{
+    "type": "git",
+    "url": "https://github.com/hhhyyyy99/halo.git"
   },
+  "license": "MIT",
   "publishConfig":{
     "access": "public",
     "registry": "https://registry.npmjs.org/",
     "typings":"dist/index.d.ts",
     "types":"dist/index.d.ts",
     "main":"dist/index.js"
+  },
+  "dependencies": {
+    "dompurify": "3.0.8"
   },
   "devDependencies": {
     "@types/dompurify": "3.0.5"
