--- a/packages/autolinker/package.json
+++ b/packages/autolinker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@eamon98/autolinker",
-  "version": "0.0.3",
-  "description": "",
+  "version": "0.0.4",
+  "description": "A simple and lightweight library for automatically linking URLs in text.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.js",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/hhhyyyy99/halo/tree/master/packages/autolinker"
+    "url": "https://github.com/hhhyyyy99/halo/"
   },
   "license": "MIT",
   "publishConfig": {
