--- a/packages/autolinker/package.json
+++ b/packages/autolinker/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.js",
+  "keywords": ["link","auto","url","urls","autolink","phone","email"],
   "browser": {
     "js": "dist/index.js"
   },
